Started adding sprites tab. Fixed danger button hover and normal state swapped. Fixed NamedSpriteListItem name overflowing. Added dialog function to get the HTMLElement of it.

--- a/src/components/named-sprite-list-item/NamedSpriteListItem.module.scss
+++ b/src/components/named-sprite-list-item/NamedSpriteListItem.module.scss
@@ -34,15 +34,17 @@
   }
 
   .image {
-    height: 100%;
+    height: calc(100% - 1em - 10px);
     object-fit: contain;
   }
 
   .label {
+    flex-shrink: 0;
+
     position: relative;
     width: 100%;
     margin-top: 5px;
-
+    
     text-align: center;
     text-wrap: nowrap;
 
